Added ExerciseMediaLinks to Exercise entity and build v3 version of fitness api